# musical_repository

./: README.md  app.py  appbck.py  full_data.csv  go_emotions.py  go_emotions_data.csv  main.py  musicals_dataset.csv  pyproject.toml  scrape.py  wiki_patch.py
data/110 in the Shade/Act 1/: A Man and a Woman.txt  Cinderella.txt  Gonna Be Another Hot Day.txt  Lizzie's Comin' Home.txt  Love, Don't Turn Away.txt  Old Maid.txt  Poker Polka.txt  Raunchy.txt  She Walked Out On Me....txt  The Hungry Men.txt  The Rain Song.txt  You're Not Fooling Me.txt
data/110 in the Shade/Act 2/: Evenin' Star.txt  Everything Beautiful.txt  Is It Really Me.txt  Little Red Hat.txt  Melisande.txt  Simple Little Things.txt  Stay and Talk....txt  The Rain Song (Reprise).txt  Wonderful Music.txt
data/13 Going on 30/Act II/: That Moment In Time.txt
data/13/Act Unknown/: 13Becoming A Man.txt  A Little More Homework.txt  All Hail the Brain  Terminal Illness.txt  Any Minute.txt  Bad Bad News.txt  Being a Geek.txt  Big Day.txt  Brand New You.txt  Get Me What I Need.txt  Getting Ready.txt  Good Enough.txt  Here I Come.txt  Hey Kendra.txt  If That's What It Is.txt  It Can't Be True.txt  Opportunity.txt  Tell Her.txt  The Lamest Place in the World.txt  What It Means To Be A Friend.txt
data/1776/Act 1/: But, Mr. Adams.txt  Cool, Cool, Considerate Men.txt  He Plays the Violin.txt  Lees of Old Virginia.txt  Momma Look Sharp.txt  Piddle, Twiddle and Resolve.txt  Sit Down, John.txt  Yours, Yours, Yours.txt
data/1776/Act 2/: Compliments.txt  Egg.txt  Is Anybody There.txt  Molasses to Rum.txt
(+9244 files in other folders)
